# norns

./: .buildinfo  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  conftest.py  entrypoint.sh  fly.toml  genindex.html  index.html  manage.py  objects.inv  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements-server.txt  requirements.txt  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.github/: dependabot.yml
.github/workflows/: PR-Checks.yml  Publish.yml  codeql-analysis.yml  codeql-cron.yml  pre-commit-checks.yml
accounts/: admin.py  apps.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_customuser_email.py  0003_alter_customuser_email.py  0004_customuser_discord_username_customuser_phone_number.py  0005_userprofile_delete_customuser.py  0006_userprofile_name.py
accounts/tests/: factories.py  test_admin.py  test_forms.py  test_models.py  test_urls.py  test_views.py
docs/source/: conf.py  index.rst
norns/: asgi.py  settings.py  urls.py  wsgi.py
pages/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
pages/tests/: test_home_page.py
parties/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
parties/migrations/: 0001_initial.py  0002_alter_party_managers_alter_partymember_managers.py  0003_alter_partymember_character_name.py  0004_alter_partymember_character_name.py  0005_alter_party_description.py  0006_partyblogpost.py
parties/tests/: test_party_delete.py  test_party_detail.py  test_party_edit.py  test_party_list_joined.py  test_party_list_owned.py  test_party_new.py
staticfiles/: staticfiles.json
templates/: base.html  home.html  navbar-nonuser.html  navbar-party-dropdown.html  navbar-user-dropdown.html  navbar-user.html  party_delete.html  party_detail.html  party_edit.html  party_list.html  party_list_joined.html  party_list_owned.html  party_new.html
templates/account/: account_inactive.html  base.html  email.html  email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  password_set.html  signup.html  signup_closed.html  verification_sent.html  verified_email_required.html
templates/pages/: home.html
templates/parties/: member_remove.html  party_delete.html  party_detail.html  party_edit.html  (+4 more)
(+11 files in other folders)
