[tool.poetry]
name = "norns"
version = "0.1.0"
description = ""
authors = ["Josh Odell <j01101111sh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.6"
black = "^23.12.0"
flake8 = "^6.1.0"
isort = "^5.13.2"
pre-commit = "^3.6.0"
pylint = "^3.0.3"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pyupgrade = "^3.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
